<resources>
    <string name="app_name">NashBonus</string>
    <string name="get_code">Get code</string>
    <string name="phone_number">Phone number</string>
    <string name="accept_terms_of_use">Accept use terms</string>
    <string name="guest_log_in">Log in as guest</string>
    <string name="enter_code">Enter code</string>
    <string name="send_code_again">Send code again</string>
    <string name="help1">A confirmation code has been sent to your number, if it has not arrived, click on the button to get the code again</string>
    <string name="screen_main_title">My cards</string>
    <string name="synced">No synced</string>
    <string name="information">Information</string>
    <string name="city">City</string>
    <string name="email">E-mail</string>
    <string name="ready">Ready</string>
    <string name="shop">Shop</string>
    <string name="cardNumber">Card Number</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_is_active">Subscription is active</string>
    <string name="payment_metod">Payment metod</string>
    <string name="subscription_info1">You can cancel your subscription renewal no later than 24 hours before debiting</string>
    <string name="subscription_disable">Disable subscription</string>
    <string name="subscription_is_disable">Subscription is disable</string>
    <string name="subscription_info2">Subscribe to Plus and get access to all the features of the application. By subscribing, you support SVOih developers.</string>
    <string name="subscription_enable">Subscribe</string>
    <string name="appeal_support">Appeal in supporting</string>
    <string name="appeal_theme">Appeal theme</string>
    <string name="appeal_text">Appeal text</string>
    <string name="appeal_files_info">Uploaded file size not more than 25 MB</string>
    <string name="appeal_send">Send an appeal</string>
    <string name="settings_title">Settings</string>
    <string name="account">Account</string>
    <string name="subscription_managment">Subscription managment</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About app</string>
    <string name="about_us">About us</string>
    <string name="actedev_lore"> About us\n \tIn one small town lived four developers: HEROIN, ALEX2014, briabeego and LEF0RT0V0. They were great friends and loved to work together on new projects. One day they decided to develop an Android app called \"NashBonus\". The app was supposed to help users find discounts and promotions at local stores.\n \tThe developers started working with great enthusiasm. They chose the Kotlin language and the Android Studio IDE. HEROIN did the design, ALEX2014 did the backend, briabeego did the frontend, and LEF0RT0V0 did the testing.\n \tWorking on the application was a lot of fun. The developers were constantly joking and laughing. They even invented nicknames for themselves: HEROIN became the \"Chief Designer\", ALEX2014 became the \"Backend Guru\", briabeego became the \"Frontend Master\", and LEF0RT0V0 became the \"Tester Father\".\n \tAfter a few months, the app was ready. The developers were very happy with the result. They published the app on Google Play and waited for feedback from users.\n \tThe feedback was very good. Users praised the app for its user-friendly interface, wide selection of stores, and up-to-date discounts. The app quickly became popular and took the leading position in the \"Discounts and Promotions\" category.\n  \tThe developers were very happy. They had achieved success by working together. They decided to continue their cooperation and develop several more applications.\n \tBut one day, a misfortune happened. HEROIN got sick and died. His friends were devastated. They couldn\'t believe that HEROIN was gone.  The developers decided to continue working on the NashBonus app. They dedicated it to the memory of HEROIN. The app became even more successful than before. It helped people save money and also helped them remember HEROIN.</string>
    <string name="about_app_text">The NashBonus application was developed as a training project by the Actedev development team. The NashBonus application allows you to store discount cards of popular stores and view information about promotions and discounts. You can also add a discount card from a third-party store. All your discount cards are stored in the cloud and linked to your account, which in turn is linked to your phone number. Thanks to this system of storing your cards, they will never get lost or deleted. Enjoy your use kittens!</string>
</resources>