<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/listenerClip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="-10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/clip"
        app:layout_constraintEnd_toEndOf="@+id/clip"
        app:layout_constraintStart_toStartOf="@+id/clip"
        app:layout_constraintTop_toTopOf="@+id/clip" />

    <EditText
        android:id="@+id/appealThemeEdit"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card"
        android:ems="10"
        android:fontFamily="@font/zen_regular"
        android:gravity="top"
        android:hyphenationFrequency="normal"
        android:inputType="phone"
        android:padding="11dp"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/foreground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appealText" />

    <EditText
        android:id="@+id/appealTextEdit"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card"
        android:ems="10"
        android:fontFamily="@font/zen_regular"
        android:hyphenationFrequency="normal"
        android:inputType="phone"
        android:padding="11dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/foreground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactingTheme" />

    <TextView
        android:id="@+id/supportContacting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:alpha="0.8"
        android:fontFamily="@font/zen_regular"
        android:text="@string/appeal_support"
        android:textColor="@color/foreground"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactingTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/zen_regular"
        android:text="@string/appeal_theme"
        android:textColor="@color/foreground"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportContacting" />

    <TextView
        android:id="@+id/appealText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/zen_regular"
        android:text="@string/appeal_text"
        android:textColor="@color/foreground"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appealTextEdit" />

    <TextView
        android:id="@+id/appelFilesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.8"
        android:fontFamily="@font/zen_regular"
        android:text="@string/appeal_files_info"
        android:textColor="@color/foreground"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/clip"
        app:layout_constraintTop_toBottomOf="@+id/appealThemeEdit" />

    <ImageView
        android:id="@+id/clip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/appelFilesInfo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appelFilesInfo"
        app:srcCompat="@drawable/ic_clip" />

    <ru.acted.nashbonus.views.NashaButtonView
        android:id="@+id/sendAppealButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:button_text="@string/appeal_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appelFilesInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>